plugins {
  id 'java'
}

group = 'dev.citysim'
version = '0.5.0'
java {
  toolchain { languageVersion = JavaLanguageVersion.of(21) }
}

repositories {
  maven { url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/' }
  mavenCentral()
  maven { url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
  compileOnly 'me.clip:placeholderapi:2.11.6'
  compileOnly 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'
  implementation 'net.kyori:adventure-text-minimessage:4.17.0'
  implementation 'com.google.code.gson:gson:2.11.0'
  testImplementation 'me.clip:placeholderapi:2.11.6'
  testImplementation 'io.papermc.paper:paper-api:1.21.1-R0.1-SNAPSHOT'
  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
  testImplementation 'org.mockito:mockito-core:5.11.0'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()
}
